15-09-2011 - Frank Golf
	* tagged with FakeRates15September2011
	* added status 3 MC matching information for FOs
	* added non-truncated PF isolation for cone sizes 0.3 and 0.4
	* changed interface to set good run list; it's no longer hard coded; now, there is a method SetGoodRunList that you need to call; if you run on data and don't set a good run list, it will crash;  if this is problematic, I can make it configurable so that ou don't have to set a goodrun list
	* also, remember that to run with on-the-fly JEC, you need to copy NtupleMacros/WW/files to the fakeRate/ directory
	
05-11-2010 - Frank Golf
	* Tagged with FakeRates05November2010B
	* Add event weight branch

24-10-2010 -  Sanjay Padhi
	* Tagged with FakeRates24Oct2010
	* Added btag and pf corrected jet variables
	* Added pfmet and pfmt
	* Added pt of the highest pT btagged jet and there is a bool to ask if the jet is btagged
	* Added dr info for the highest pT btagged jet
	* new def. of SS codes for Muon and Electron selections
	* Need external package cvs co -r V01-09-01-10 CondFormats/JetMETObjects for JetCorrections
	* ELENOTCONV_HITPATTERN_0MHITS is defined as the (cms2.els_exp_innerlayers().at(index) == 0)||(cms2.els_exp_innerlayers39X().at(index) == 0)
	* Added 15.21 pb-1 json
	* Updated input data with latest 38x data and mc information		